# clwb-sandbox

./: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  run
cli/: __about__.py  _create.py  _docker.py  _info.py  _list.py  _main.py  _remove.py  _start.py  _stop.py  _util.py
root/config/.config/autostart/: idea_backend.desktop
root/defaults/: idea_backend.sh  install_bazel.sh  install_ide.sh
root/etc/s6-overlay/s6-rc.d/init-bazel/: run  up
root/etc/s6-overlay/s6-rc.d/svc-agentlib-forwarder/: run
root/etc/s6-overlay/s6-rc.d/svc-idea-forwarder/: run
root/etc/s6-overlay/s6-rc.d/svc-sshd/: run
