[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "cli"
dynamic = ["version", "description", "dependencies"]
authors = [{ name = "Daniel Brauner", email = "daniel.brauner@jetbrains.com" }]
license-files = { paths = ["LICENSE"] }
readme = "README.md"
requires-python = ">=3.12"

[project.scripts]
cli = "cli:main"

[tool.hatch.version]
path = "cli/__about__.py"

[tool.hatch.description]
path = "cli/__about__.py"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.build.targets.wheel]
packages = ["cli"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
